Added Ability to edit existing features

--- a/Tasker/Base.lproj/Main.storyboard
+++ b/Tasker/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Jih-eZ-En4" kind="presentation" identifier="edit" id="NbP-jw-jod"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -92,12 +95,12 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="205" id="K4S-VY-Qz6"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qhc-8a-ydz">
                                 <rect key="frame" x="198" y="176" width="205" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
@@ -123,4 +126,7 @@
             <point key="canvasLocation" x="1260" y="98"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="NbP-jw-jod"/>
+    </inferredMetricsTieBreakers>
 </document>
